--- a/part6/aph-catalogue.Rmd
+++ b/part6/aph-catalogue.Rmd
@@ -8,7 +8,7 @@ sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
 tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis
 sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
 Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
-ut massa tempor, ac dapibus dui viverra.  Testing melissa
+ut massa tempor, ac dapibus dui viverra.  
 
 ## APH
 
