--- a/book.bib
+++ b/book.bib
@@ -749,3 +749,19 @@ volume = {220},
 year = {2014}
 }
 
+@misc{Watson1997,
+abstract = {The affective explosion in psychology has led to tremendous advances in mood measurement. Mood ratings reflect a hierarchical structure consisting of two broad dimensions-Positive Affect and Negative Affect-and multiple specific states. Brief scales have been developed that reliably assess Positive and Negative Affect across different populations and time frames, in both between- and within-subject data. We examine controversies related to (a) the content of these higher order scales and (b) the independence of Positive and Negative Affect. Regarding the latter, we show that Positive and Negative Affect scales remain largely independent across a wide range of conditions, even after controlling for random and systematic error. Finally, there remains little consensus regarding the lower order structure of affect. This lack of a compelling taxonomy has substantially slowed progress in assessing mood at the specific affect level.},
+author = {Watson, David and Clark, Lee Anna},
+booktitle = {Journal of Personality Assessment},
+doi = {10.1207/s15327752jpa6802_4},
+file = {:Users/lckooistra/Google Drive/New Literature/Mendeley/Watson{\_}1997.pdf:pdf},
+isbn = {0022-3891},
+issn = {00223891},
+number = {2},
+pages = {267--296},
+pmid = {16370781},
+title = {{Measurement and mismeasurement of mood: Recurrent and emergent issues}},
+volume = {68},
+year = {1997}
+}
+
