Add info references

--- a/book.bib
+++ b/book.bib
@@ -16,6 +16,11 @@
   url             = {http://linkinghub.elsevier.com/retrieve/pii/S0272735812000712 http://www.ncbi.nlm.nih.gov/pubmed/22721999},
 }
 
+@book{bennik2015,
+  title={Every Dark Cloud Has a Colored Lining: The Relation Between Positive and Negative Affect and Reactivity to Positive and Negative Events},
+  author={Bennik, Elise Charlotte},
+  year={2015}
+}
 
 @incollection{Bolger2013,
 abstract = {A complete, practical guide to planning and executing an intensive longitudinal study, this book provides the tools for understanding within-subject social, psychological, and physiological processes in everyday contexts. Intensive longitudinal studies involve many repeated measurements taken on individuals, dyads, or groups, and include diary and experience sampling studies. A range of engaging, worked-through research examples with datasets are featured. Coverage includes how to: select the best intensive longitudinal design for a particular research question, model within-subject change processes for continuous and categorical outcomes, distinguish within-subject from between-subjects effects, assess the reliability of within-subject changes, assure sufficient statistical power, and more. Several end-of-chapter write-ups illustrate effective ways to present study findings for publication. Datasets and output in SPSS, SAS, Mplus, HLM, MLwiN, and R for the examples are available on the companion website},
@@ -25,6 +30,12 @@ booktitle = {Intensive longitudinal methods: An introduction to diary and experi
 keywords = {ambulatory assessments,daily life,diaries,diary methods,ecological momentary assessment,experience sampling,intensive longitudinal data,intensive longitudinal designs,real time data capture,research methods,statistics,studies},
 title = {{Introduction to intensive methods}},
 year = {2013}
+}
+
+@article{Booij2015,
+  title={Dynamics of the human stress system in depression},
+  year= {2015},
+  author={Booij, Sanne}
 }
 
 @article{Conner2012,
@@ -272,6 +283,18 @@ year = {2011}
   doi             = {10.1155/2014/915172, 10.1155/2014/915172},
   mendeley-groups = {Reviews},
   url             = {http://www.hindawi.com/journals/bmri/2014/915172/abs/, http://www.hindawi.com/journals/bmri/2014/915172/abs/{\%}5Cnhttp://downloads.hindawi.com/journals/bmri/2014/915172.pdf{\%}5Cnhttp://www.hindawi.com/journals/bmri/2014/915172/{\%}5Cnhttp://www.ncbi.nlm.nih.gov/},
+}
+
+@book{Mehl2012,
+abstract = {Laboratory-based experimental methods historically have been the strength and pride of psychology and related disciplines. Yet a comprehensive science of behavior also requires the study of humans in real life. Bringing together leading investigators, this book reviews the breadth of current approaches for studying how people think, feel, and behave in everyday environments. The Handbook is organized in four parts. Part I covers the theoretical and methodological foundations of conducting daily life research. Part II provides guidance for designing a high-quality study and selecting and implementing appropriate methods. The chapters describe experience sampling methods, diary methods, ambulatory physiological measures, and other tools—including recording technologies and computerized approaches—that allow repeated, real-time measurement in natural settings. Part III focuses on techniques for analyzing intensive data from daily life, featuring practical discussions of power analysis, psychometrics, data cleaning, multilevel modeling, time series analysis, and other topics. Part IV reviews how methods for studying daily life have been employed in different subfields and research areas, such as the study of emotion, close relationships, personality, health, development, psychopathology, and mental health treatment. Specific advantages and challenges inherent to using the methods in each area are discussed. Timely and authoritative, this handbook meets a key need for research psychologists and for graduate students in social/personality, health, developmental, industrial/organizational, and clinical psychology. (PsycINFO Database Record (c) 2016 APA, all rights reserved)},
+address = {New York, NY, US},
+booktitle = {Handbook of research methods for studying daily life.},
+editor = {Mehl, Matthias R and Conner, Tamlin S},
+isbn = {978-1-60918-747-7 (Hardcover); 978-1-60918-749-1 (PDF)},
+keywords = {*Data Collection,*Experimental Design,*Experimentation,*Life Experiences,*Methodology,Behavior,Cognition,Emotions,Psychological Theories},
+publisher = {Guilford Press},
+title = {{Handbook of research methods for studying daily life.}},
+year = {2012}
 }
 
 
@@ -765,3 +788,21 @@ volume = {68},
 year = {1997}
 }
 
+@article{Wichers2012,
+abstract = {Objective: Novel study designs using within-subject methodology and frequent and prospective measurements are required to unravel direction of causality and dynamic processes of behavior over time. The current study examined the effects of physical activity on affective state. A primary and within-study replication sample was derived from twin pairs. Methods: Female twins (n = 504) participated in an experience sampling method study at baseline. Positive and negative affective changes were examined before and following daily life increases in physical activity. Neuroticism was measured at baseline and depressive symptoms were assessed at baseline and at each of four follow-up assessments. Diagnoses, derived by Structured Clinical Interview for Diagnostic and Statistical Manual for Mental Health–IV axis I disorders, (A. P. A., 1994) were obtained at baseline. Results: A significant increase in positive affect (PA) following the moment of increase in physical activity was replicated across both samples up to 180 min after physical activity. There was no effect of physical activity on negative affect (NA). Across the two samples, a history of fulfilling diagnostic criteria for depression at least once moderated the effect of physical activity on PA, in that the effect was lost more rapidly. Conclusions: The study supports a causal effect of physical activity on PA. However, people with past experience of clinical depression may benefit less from the PA-inducing effect of physical activity. These findings have implications for the use of physical exercise in clinical practice. (PsycINFO Database Record (c) 2011 APA, all rights reserved)},
+author = {Wichers, Marieke and Peeters, Frenk and Rutten, Bart P. F. and Jacobs, Nele and Derom, Catherine and Thiery, Evert and Delespaul, Philippe and van Os, Jim},
+doi = {10.1037/a0025688},
+file = {:Users/lckooistra/Google Drive/New Literature/Mendeley/Wichers{\_}HP{\_}2011.pdf:pdf},
+isbn = {1930-7810 (Electronic); 0278-6133 (Print)},
+issn = {1930-7810},
+journal = {Health Psychology},
+keywords = {1991,and decreased positive affect,clark,depression,experience sampling method,in affective states,is characterized by increased,major depressive disorder,mdd,na,negative affect,pa,physical activity,positive affect,restoration of this imbalance,watson},
+mendeley-groups = {Disorders/Mood},
+number = {2},
+pages = {135--144},
+pmid = {21988094},
+title = {{A time-lagged momentary assessment study on daily life physical activity and affect.}},
+url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/a0025688},
+volume = {31},
+year = {2012}
+}
