--- a/part6/aph-catalogue.Rmd
+++ b/part6/aph-catalogue.Rmd
@@ -235,21 +235,20 @@ Project goals: Explore whether a) blood glucose variability (SD and CV) is relat
 
 ### FAntasTIGUE
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
-metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
-sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
-tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis
-sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
-Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
-ut massa tempor, ac dapibus dui viverra.  
+Project team: Yvonne Goërtz, Melissa Thong, Daisy Janssen, Jeanette Peters, Jan Vercoulen, Chris Burtin, Yvonne Meertens-Kerris, Arnold Coors, Jean Muris, Emiel Wouters, Judith Prins, Mirjam Sprangers, Martijn Spruit
+APH site: AMC (in collaboration with Ciro-Horn, Maastricht UMC, Radboud UMC, Hasselt University)
+Full title: Fatigue in patients with chronic obstructive pulmonary disease: FAntasTIGUE study
+Topic: Smartphone data collection
+Status: Ongoing, 2017-2020
+Target population: Patients with clinically stable chronic obstructive pulmonary disease (proposed: n=60) 
+Platform used: Psymate (https://psymate.eu)
+Study design: Longitudinal with 4 data collection periods (baseline, 4, 8, 12 months)  
+EMA active: For each data collection period, participants are prompted 8 times a day at random moments between 7.30am and 22.30pm, for 5 consecutive days, to answer 19 items (including 9 contextual items).Measured concepts include fatigue, relaxed feeling, breathlessness, agitation, uncertainty, irritation, satisfaction, anxiety, feeling energetic, and feeling mentally fit. Items are rated on a 7-point Likert-scale, ranging from ‘Not at all’ to ‘Very much’. In conjunction with the self-reported questionnaire, patients are also asked to wear an actigraph (activity monitor) for 7 days, even during sleep.
+Data management: During the data collection period, patients are provided with iPods installed with the EMA application.
+Project goals: To capture possible diurnal fluctuations in fatigue.
+Results: Future results will guide the development of interventions for the management of fatigue in this patient group.
 
-Donec sed lectus at sem ultrices commodo. Proin a viverra metus, nec scelerisque
-odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id
-consequat nibh. Ut eget leo blandit orci posuere tincidunt ac sed erat. Aenean
-metus metus, eleifend ut facilisis a, fringilla ut neque. Nunc hendrerit
-cursus eleifend. Pellentesque habitant morbi tristique senectus et netus et
-malesuada fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat
-purus nec, lobortis imperdiet diam. 
+Link to protocol paper: http://bmjopen.bmj.com/content/8/4/e021745.long
 
 
 ### The IMPACT project
